# ragkit

./: .gitignore  BACKEND_TEST_PROCEDURE.md  CHANGELOG.md  CODE_REVIEW.md  CONTEXT.md  DEPLOY.md  Dockerfile  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_DESKTOP.md  INSTALL.md  ISSUES_TO_FIX.md  ISSUES_v2.0.0_TEST2.md  LICENSE  MANIFEST.in  PLAN_COMPLET_RAGKIT_V2.md  PLAN_PHASES_RESUMEES.md  PUSH_TO_GITHUB.md  RAGKIT_DESKTOP_ROADMAP.md  RAGKIT_DESKTOP_SPECS.md  README.md  RELEASE_NOTES_v2.0.0.md  RELEASE_PLAN.md  SETUP_MODE_SPEC.md  STANDALONE_DESKTOP_BUILD.md  TODO.md  UI_ENHANCEMENT_PLAN.md  améliorations.txt  build_local.ps1  docker-compose.yaml  mypy.ini  pyproject.toml  pytest.ini  ragkit-backend.spec  ragkit-parcours-utilisateur.md  ragkit-v1-config.yaml  ragkit_v2_roadmap_etape1.md  remove_nul.py  requirements.txt  ruff.toml  run_tests.py  (+2 more)
.github/: RELEASE_TEMPLATE.md
desktop/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: api-reference.md  configuration.md  getting-started.md  wizard.md
improve_ragkit/: 00_ROADMAP.md  ETAPE_01_INGESTION_PREPROCESSING.md  ETAPE_02_CHUNKING.md  ETAPE_03_EMBEDDING.md  ETAPE_04_VECTORDB.md  ETAPE_05_RECHERCHE_SEMANTIQUE.md  ETAPE_06_RECHERCHE_LEXICALE.md  ETAPE_07_RECHERCHE_HYBRIDE.md  ETAPE_08_RERANKING.md  ETAPE_09_LLM_GENERATION.md  ETAPE_10_CACHE_PERFORMANCE.md  ETAPE_11_MONITORING_EVALUATION.md  ETAPE_12_SECURITE_COMPLIANCE.md  ETAPE_13_MAINTENANCE.md
pyinstaller_hooks/: hook-chromadb.py  runtime_hook_chromadb.py
ragkit-ui/: index.html  package-lock.json  package.json  (+2 more)
(+379 files in other folders)
