[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragkit"
version = "1.0.0"
description = "Configuration-First Agentic RAG Framework"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "RAGKIT Contributors" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

dependencies = [
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "pyyaml>=6.0",
  "litellm>=1.0",
  "fastapi>=0.100",
  "uvicorn>=0.20",
  "gradio>=4.0",
  "typer>=0.9",
  "structlog>=23.0",
  "qdrant-client>=1.6",
  "chromadb>=0.4",
  "unstructured>=0.10",
  "rank-bm25>=0.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "pytest-cov>=4.0",
  "ruff>=0.1",
  "mypy>=1.0",
  "types-PyYAML>=6.0"
]

[project.scripts]
ragkit = "ragkit.cli.main:app"

[tool.setuptools.packages.find]
include = ["ragkit*"]

[tool.setuptools]
include-package-data = true
